k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: shop-maram
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: shopmaramacr.azurecr.io/frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: acr-secret
